--- a/assets/sass/cmu/cmuDefaults/settings/_cmuColors.scss
+++ b/assets/sass/cmu/cmuDefaults/settings/_cmuColors.scss
@@ -72,6 +72,9 @@ $cmu-color-purewhite: 	#FFF;
 	// Title for subjects, headlines, etc.
 	$cmu-color-title: $cmu-color-dkgray;			// lighter color since titles are larger
 	
+	// Default hover color 
+	$cmu-color-hover: $cmu-color-xltgray;
+
 	// Active text
 	$cmu-color-active: $cmu-color-blue;
 
@@ -88,14 +91,18 @@ $cmu-color-purewhite: 	#FFF;
 	$cmu-color-link--dark_hover: $cmu-color-link;
 	$cmu-color-link--dark_active: $cmu-color-link_active;
 
-	// 
+	// Tabs and buttons
+	$cmu-color-selected: $cmu-color-active;
+	$cmu-color-selected--background: $cmu-color-white;
+	$cmu-color-unselected: $cmu-color-gray;
+	$cmu-color-unselected--background: transparent;
 
 	// Forms, Input, Search, etc.
 	$cmu-color-placeholder: $cmu-color-ltmdgray; 			// used as hint color for inputs
 	$cmu-color-darken: rgba(0,0,0,0.3); 					// used for button onhover states
 
 	// Thread lists
-	$cmu-color-threadlist-hover: $cmu-color-xltgray; 		// used when hovering over a row in a list
+	$cmu-color-threadlist-hover: $cmu-color-hover; 			// used when hovering over a row in a list
 
 // 
 // ENVIRONMENT
